<resources>
    <string name="app_name">EduSoft</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="get_started">Get Started</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_pw_txt">Please enter your registered e-mail below.</string>
    <string name="reset">Reset</string>
</resources>
