<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/gradient_bg">

    <EditText
        android:id="@+id/signUpUserName"
        style="@style/App_EditTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/name"
        android:layout_marginTop="100dp"
        android:inputType="textPersonName"/>
    <EditText
        android:id="@+id/signUpUserEmail"
        style="@style/App_EditTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpUserName"
        android:layout_marginTop="10dp"
        android:hint="@string/login_email_text"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/signUpUserPwd"
        style="@style/App_EditTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpUserEmail"
        android:hint="@string/login_password_text"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <CheckBox
        android:id="@+id/showPwdCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpUserPwd"
        android:layout_marginTop="10dp"
        android:text="@string/show_password"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginStart="20dp"
        android:buttonTint="@android:color/white"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/showPwdCheckBox"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        android:id="@+id/signUpProgress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>