<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPwActivity">

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="101dp"
        android:layout_height="80dp"
        android:src="@drawable/egesoft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/forgotPwTxt"
        app:layout_constraintBottom_toTopOf="@id/forgotPwUserEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg"
        android:text="@string/forgot_pw_txt"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <EditText
        android:id="@+id/forgotPwUserEmail"
        style="@style/App_EditTextStyle"
        app:layout_constraintTop_toBottomOf="@id/profileImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:hint="@string/login_email_text"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/forgotPwBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="224dp"
        android:background="@color/colorAccent"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPwUserEmail"
        app:layout_constraintVertical_bias="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>